[BE] Updates user permissions - locks down admin role